trunk/Archive2/3e/fb39d940482e19/output
main.cpp:41:9: error: 'int Descendant::getTen()' marked override, but does not override
     int getTen()          override { return 10+1;}    
         ^
main.cpp:42:9: error: 'int Descendant::getTwenty() const' marked override, but does not override
     int getTwenty() const override { return 20+1;}
         ^
main.cpp:43:9: error: virtual function 'virtual int Descendant::getForty() const'
     int getForty()  const override { return 40+1;}
         ^
main.cpp:25:17: error: overriding final function 'virtual int Base::getForty() const'
     virtual int getForty()  const final {return 40;} 
                 ^
main.cpp:44:9: error: 'int Descendant::getSixty() const' marked override, but does not override
     int getSixty()  const override { return 60+1;}
         ^
